2014-06-13  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* javaws.desktop,
	* javaws.png:
	Remove obsolete files.
	* Makefile.am:
	(EXTRA_DIST): Remove above.

2014-06-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* .hgignore: Add compile script added by
	recent version of Automake.
	* scripts/create_tarballs.sh: New script
	to create tarballs using Mercurial, as used
	for the drops created for the previous bump.
	* scripts/gen_changeset_and_sha256sums.sh:
	Updated to latest local version, with support
	for tarballs created by create_tarballs.sh.
	* scripts/update_tarballs.sh:
	Updated to latest local version with support
	for OpenJDK 8.

2014-07-31  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(CORBA_CHANGESET): Update to icedtea-2.6pre05 tag.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to pre05.
	* hotspot.map: Update to icedtea-2.6pre05tag. Set
	type of default to drop and aarch64 to hg.
	* patches/rhino.patch: Regenerated following
	removal of merge artefact.

2014-06-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* AUTHORS:
	Add authors of infinality patch. Websites are used
	as present as couldn't find any e-mail addresses.
	* INSTALL: Document --enable-infinality.
	* Makefile.am:
	(DROP_URL): Added to point to drops on IcedTea server.
	(CACAO_BASE_URL): Reference DROP_URL.
	(JAMVM_BASE_URL): Likewise.
	(ICEDTEA_MAJOR): Split out major release name ('IcedTea7')
	(ICEDTEA_PREFIX): Use ICEDTEA_MAJOR.
	(ICEDTEA_URL): Path to drops.
	(OPENJDK_URL): Removed.
	(CORBA_URL): Likewise.
	(JAXP_URL): Likewise.
	(JAXWS_URL): Likewise.
	(JDK_URL): Likewise.
	(LANGTOOLS_URL): Likewise.