@@ -1,5 +1,14 @@
 2014-06-13  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
+	PR1848: Removal of project support leaves
+	trailing '-' in version
+	* Makefile.am:
+	(versioning): Drop use of PROJECT_NAME removed
+	in PR1365.
+	* NEWS: Updated.
+
+2014-06-13  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
 	* javaws.desktop,
 	* javaws.png:
 	Remove obsolete files.
